--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Changed all headings to h2 -->
   
     <main class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
